--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Viandas, Viandas saludables, Comida, Comida casera, Alimentación">
+    <meta name="description" content="Servicio diario de viandas, y bebidas saludables">
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +17,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    <title>Dia A Dia | Inicio</title>
+    <title>Día A Día | Inicio</title>
 
 </head>
 
@@ -134,7 +136,7 @@
         <section id="tercer-seccion">
             <article class="flexbox-columna">
                 <figure>
-                    <img src="img/panadero.png" alt="">
+                    <img src="img/panadero.png" alt="Ícono de panadero">
                 </figure>
                 <h2>Sabor a comida casera</h2>
                 <p>Este es el sentir de nuestro trabajo. Nuestros platos son eleborados en base a la idea de la comida
@@ -150,7 +152,7 @@
                 <label for="id-mail">Mail</label>
                 <input type="email" id="id-mail" class="input-texto">
                 <div>
-                    <input type="checkbox" name="" id="id-check">
+                    <input type="checkbox" name="novedades" id="id-check">
                     <label for="id-check">Deseo recibir todas las novedades de Día a Día</label>
                 </div>
                 <input type="submit" value="Enviar" class="boton-oscuro">
@@ -162,15 +164,15 @@
 
     <!-- FOOTER -->
     <footer>
-        <img src="img/logo-negro-chico.png" alt="">
+        <img src="img/logo-negro-chico.png" alt="Logo en negro de Día a Día">
         <div>
             <h5>Día A Día</h5>
             <ul>
                 <li>
-                    <a href="">Nosotros</a>
+                    <a href="#">Nosotros</a>
                 </li>
                 <li>
-                    <a href="">Contacto</a>
+                    <a href="#">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -178,13 +180,13 @@
             <h5>Compras</h5>
             <ul>
                 <li>
-                    <a href="">Como comprar</a>
+                    <a href="#">Como comprar</a>
                 </li>
                 <li>
-                    <a href="">Preguntas Frecuentes</a>
+                    <a href="#">Preguntas Frecuentes</a>
                 </li>
                 <li>
-                    <a href="">Términos y condiciones</a>
+                    <a href="#">Términos y condiciones</a>
                 </li>
             </ul>
         </div>
@@ -192,23 +194,23 @@
             <h5>Mi cuenta</h5>
             <ul>
                 <li>
-                    <a href="">Acceder</a>
+                    <a href="#">Acceder</a>
                 </li>
                 <li>
-                    <a href="">Wishlist</a>
+                    <a href="#">Wishlist</a>
                 </li>
             </ul>
         </div>
         <div>
             <h5>Seguinos en nuestras redes</h5>
             <div id="contenedor-redes">
-                <a href="">
+                <a href="https://www.facebook.com/" target="_blank">
                     <img src="img/facebook.png" alt="Logo de Facebook">
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/" target="_blank">
                     <img src="img/instagram.png" alt="Logo de Instagram">
                 </a>
-                <a href="">
+                <a href="https://mail.google.com/" target="_blank">
                     <img src="img/gmail.png" alt="Logo de Gmail">
                 </a>
             </div>
