--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="Viandas, Viandas saludables, Alimentación saludable, Alimentación, Recetas, Cocina, Preparación">
+    <meta name="description" content="Blog con artículos informativos y recetas">
+
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +20,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <title>Dia A Dia | Blog</title>
+    <title>Día A Día | Blog</title>
 
 </head>
 
@@ -212,13 +217,13 @@
         <div>
             <h5>Seguinos en nuestras redes</h5>
             <div id="contenedor-redes">
-                <a href="">
+                <a href="https://www.facebook.com/" target="_blank">
                     <img src="../img/facebook.png" alt="Logo de Facebook">
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/" target="_blank">
                     <img src="../img/instagram.png" alt="Logo de Instagram">
                 </a>
-                <a href="">
+                <a href="https://mail.google.com/" target="_blank">
                     <img src="../img/gmail.png" alt="Logo de Gmail">
                 </a>
             </div>
