--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="Viandas, Viandas saludables, Comida, Comida casera, Alimentación, Viandas en Montevideo">
+    <meta name="description" content="Información de contacto para nuestro servicio diario de viandas">
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +19,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <title>Dia A Dia | Contacto</title>
+    <title>Día A Día | Contacto</title>
 
 </head>
 
@@ -106,7 +110,7 @@
 
                     <div class="campo-mensaje">
                         <label for="id-mensaje">Envíanos tu comentario <span>*</span></label><br>
-                        <textarea name="" id="id-mensaje" cols="30" rows="10" placeholder="Tu Mensaje"
+                        <textarea name="mensaje" id="id-mensaje" cols="30" rows="10" placeholder="Tu Mensaje"
                             required></textarea>
                     </div>
                     <div class="campo-botones">
@@ -161,13 +165,13 @@
         <div>
             <h5>Seguinos en nuestras redes</h5>
             <div id="contenedor-redes">
-                <a href="">
+                <a href="https://www.facebook.com/" target="_blank">
                     <img src="../img/facebook.png" alt="Logo de Facebook">
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/" target="_blank">
                     <img src="../img/instagram.png" alt="Logo de Instagram">
                 </a>
-                <a href="">
+                <a href="https://mail.google.com/" target="_blank">
                     <img src="../img/gmail.png" alt="Logo de Gmail">
                 </a>
             </div>
