--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="Viandas, Viandas saludables, Comida, Comida casera, Alimentación, Smoothies, Pasta casera, Pasta">
+    <meta name="description" content="Menú semanal de nuestras viandas">
 
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +19,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 
-    <title>Dia A Dia | Menú</title>
+    <title>Día A Día | Menú</title>
 
 </head>
 
@@ -65,6 +69,7 @@
     <!-- MAIN -->
     <main>
         <!-- Primer sección -->
+        <h1>Menú</h1>
         <section id="primer-seccion-menu">
             <div class="centrado-grande">
                 <figure class="grid-item1">
@@ -88,54 +93,113 @@
 
         <!-- Segunda sección -->
         <section id="segunda-seccion-menu">
-            <h1>Nuestro Menú semanal</h1>
-            <div>
-                <div>
-                    <h2>Lunes</h2>
+            <h2>Nuestro Menú semanal</h2>
+            <div class="centrado-grande">
+                <!-- 1er article -->
+                <article>
+                    <h3>Lunes</h3>
                     <figure>
-                        <img src="" alt="">
+                        <img src="../img/lasania.jpg" alt="Foto de plato con lasaña">
                     </figure>
-                    <h3>Nombre del producto</h3>
-                    <p>Descripción del producto</p>
-                </div>
-
-                <div>
-                    <h2>Martes</h2>
+                    <h4>Lasaña</h4>
+                    <p>Variedades:</p>
+                    <ul>
+                        <li>Carne y queso</li>
+                        <li>4 quesos</li>
+                        <li>Verduras</li>
+                        <li>Pollo</li>
+                    </ul>
+                    <input type="button" value="Realizar pedido" class="boton-oscuro">
+                </article>
+                <!-- 2do article -->
+                <article>
+                    <h3>Martes</h3>
                     <figure>
-                        <img src="" alt="">
+                        <img src="../img/milanesa.jpg" alt="Foto de plato con milanesas y lechuga">
                     </figure>
-                    <h3>Nombre del producto</h3>
-                    <p>Descripción del producto</p>
-                </div>
-
-                <div>
-                    <h2>Miércoles</h2>
+                    <h4>Milanesa con guarnición</h4>
+                    <p>Milanesa de carne, pollo, pescado ó berenjena</p>
+                    <p>Guarnición:</p>
+                    <ul>
+                        <li>Arroz</li>
+                        <li>Papas fritas</li>
+                        <li>Ensalada rusa ó de tomate y lechuga</li>
+                        <li>Puré de papas ó calabaza</li>
+                    </ul>
+                    <input type="button" value="Realizar pedido" class="boton-oscuro">
+                </article>
+                <!-- 3er article -->
+                <article>
+                    <h3>Miércoles</h3>
                     <figure>
-                        <img src="" alt="">
+                        <img src="../img/estofado.jpg" alt="Foto de plato con estofado">
                     </figure>
-                    <h3>Nombre del producto</h3>
-                    <p>Descripción del producto</p>
-                </div>
-
-                <div>
-                    <h2>Jueves</h2>
+                    <h4>Estofado</h4>
+                    <p>Variedades:</p>
+                    <ul>
+                        <li>De carne y papas</li>
+                        <li>De pollo</li>
+                        <li>De cerdo</li>
+                        <li>De verduras</li>
+                    </ul>
+                    <input type="button" value="Realizar pedido" class="boton-oscuro">
+                </article>
+                <!-- 4to article -->
+                <article>
+                    <h3>Jueves</h3>
                     <figure>
-                        <img src="" alt="">
+                        <img src="../img/omelette.jpg" alt="Foto de plato con omelette y tomates">
                     </figure>
-                    <h3>Pasta rellena</h3>
-                    <p>La pasta rellena es uno de los platos más sabrosos y van con todo. En nuestro menú te ofrecemos
-                        ravioles,
-                        sorrentinos, ñoquis o cappelletiis, con variados rellenos</p>
-                </div>
-
-                <div>
-                    <h2>Viernes</h2>
-                    <figure>
-                        <img src="" alt="">
-                    </figure>
-                    <h3>Nombre del producto</h3>
-                    <p>Descripción del producto</p>
-                </div>
+                    <h4>Omelette ó Tortilla con ensalada</h4>
+                    <p>Variedades:</p>
+                    <ul>
+                        <li>Omelette capresse o de espinaca</li>
+                        <li>Tortilla de papas o española</li>
+                        <li>Ensalada de lechuga y tomate</li>
+                    </ul>
+                    <input type="button" value="Realizar pedido" class="boton-oscuro">
+                </article>
+                <!-- 5to article -->
+                <article>
+                    <h3>Viernes</h3>
+                    <div>
+                        <figure>
+                            <img src="../img/ravioles.jpg" alt="Foto de ravioles de verdura">
+                        </figure>
+                        <div>
+                            <h4>Pasta rellena</h4>
+                            <p>Variedades:</p>
+                            <ul>
+                                <li>Ravioles:
+                                    <ul>
+                                        <li>Jamón & Queso</li>
+                                        <li>Calabaza & Nuez</li>
+                                        <li>Espinaca & Queso</li>
+                                    </ul>
+                                </li>
+                                <li>Sorrentinos:
+                                    <ul>
+                                        <li>Jamón & Queso</li>
+                                        <li>Calabaza & Nuez</li>
+                                        <li>Espinaca & Queso</li>
+                                        <li>Salmón</li>
+                                        <li>Champiñiones & Parmesano</li>
+                                        <li>Pollo</li>
+                                    </ul>
+                                </li>
+                                <li>Cappellettis:
+                                    <ul>
+                                        <li>Jamón & Queso</li>
+                                        <li>Calabaza</li>
+                                        <li>Espinaca</li>
+                                        <li>Carne</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                            <input type="button" value="Realizar pedido" class="boton-oscuro">
+                        </div>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
@@ -183,13 +247,13 @@
         <div>
             <h5>Seguinos en nuestras redes</h5>
             <div id="contenedor-redes">
-                <a href="">
+                <a href="https://www.facebook.com/" target="_blank">
                     <img src="../img/facebook.png" alt="Logo de Facebook">
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/" target="_blank">
                     <img src="../img/instagram.png" alt="Logo de Instagram">
                 </a>
-                <a href="">
+                <a href="https://mail.google.com/" target="_blank">
                     <img src="../img/gmail.png" alt="Logo de Gmail">
                 </a>
             </div>
